fix: done fixing cmd on firefox

--- a/front/src/BeerCrackerz.scss
+++ b/front/src/BeerCrackerz.scss
@@ -52,8 +52,8 @@ nav {
       box-shadow: 0 0 1rem var(--color-bg-a9);
       display: flex;
       justify-content: center;
-      margin: .2rem 0;
-      padding: .2rem;
+      margin: 2px 0;
+      padding: 2px;
       width: 100%;
 
       &:first-child {
