--- a/front/src/scss/utils/_leaflet.scss
+++ b/front/src/scss/utils/_leaflet.scss
@@ -20,7 +20,7 @@
   background-clip: padding-box;
   border: 2px solid var(--color-bg-a1);
   border-radius: .5rem;
-  bottom: 15.6rem;
+  bottom: 156px;
   box-shadow: 0 0 1rem var(--color-bg-a9);
   position: absolute;
   right: 0;
